crates/swc_ecma_parser/tests/errors/strict-mode/argument/input.js
export function f0() {
    return Array.from(arguments, arguments => arguments + 1, (arguments, b) => arguments + b);
}